# unitTesting-and-benchmarking

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: main.cpp
benchmark/: CMakeLists.txt  benchmark.cpp
include/: codility.h
src/: CMakeLists.txt  codility.cpp
unittest/: CMakeLists.txt  unittest.cpp
